--- a/restore.html.md.erb
+++ b/restore.html.md.erb
@@ -100,7 +100,7 @@ Perform the following steps to restore a BOSH deployment:
     * `BOSH_CLIENT`, `BOSH_CLIENT_SECRET`: If you have a BOSH Director with User Account and Authentication (UAA) as the authentication provider, use a UAA client as the username and a UAA client secret as the password. If you have a BOSH Director with basic auth configured, use your username and password.
     * `BOSH_TARGET`: This is the FQDN or IP address of your BOSH Director.
     * `DEPLOYMENT-NAME`: This is the name of the deployment you want to restore.
-    * `PATH_TO_BOSH_SERVER_CERT`: This is the path to the BOSH Director’s Certificate Authority (CA) certificate if the certificate is not verifiable by the local machine’s certificate chain. 
+    * `PATH_TO_BOSH_CA_CERT`: This is the path to the BOSH Director’s Certificate Authority (CA) certificate if the certificate is not verifiable by the local machine’s certificate chain. 
 	* `PATH_TO_DEPLOYMENT_BACKUP`: This is the path to the BOSH deployment backup you want to restore.
 	<p class="note"><strong>Note</strong>: The BBR restore command can take a long time to complete. You can run it independently of the SSH session so that the process can continue running even if your connection to the jumpbox fails. The command above uses <code>nohup</code>, but you could also run the command in a <code>screen</code> or <code>tmux</code> session.</p>
 
@@ -143,7 +143,7 @@ $ BOSH_CLIENT_SECRET=BOSH_CLIENT_SECRET \
     --target BOSH_TARGET \
     --username BOSH_CLIENT \
     --deployment DEPLOYMENT_NAME \
-    --ca-cert PATH_TO_BOSH_SERVER_CERT \
+    --ca-cert PATH_TO_BOSH_CA_CERT \
     restore-cleanup
 </pre>
 
