--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -18,20 +18,15 @@ For more information about installing and using BBR, see the [Installing BOSH Ba
 
 BBR is a binary that can back up and restore BOSH deployments and BOSH Directors. BBR requires that the backup targets supply scripts that implement the backup and restore functions.
 
-BBR is not dependent on a particular version of BOSH. 
+BBR is not dependent on a particular version of BOSH.
 However, a BOSH deployment must have its backup and restore [scripts](#contract) packaged in the releases to be backed up and restored with BBR. For more information, consult the documentation for the deployment.
 
-You can back up and restore the following BOSH deployments with BBR:
-
-<ul>
+<b>You can currently back up and restore the following BOSH deployments with BBR:</b>
 <%= vars.bbr_ert %>
-<li>BOSH Director, including UAA and CredHub</li>
-</ul>
 
-BBR supports BOSH Directors which use one of the following:
+1. BOSH Director, including UAA and CredHub, with either Basic Auth or Client/Client-Secret UAA authentication
 
-* Basic Auth
-* Client/Client-Secret UAA Authentication
+1. Cloud Foundry with specific [configuration](cf-backup.html)
 
 ## <a id='contract'></a>Contract
 
