--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -45,25 +45,49 @@ This approach has the following advantages:
 1. **post-backup-unlock**: The post-backup unlock script unlocks the job after the backup is complete.
 
 ### Restore Scripts
-1. **pre-restore-lock**: The pre-restore-lock script locks the job so the restore is consistent across the cluster. 
+1. **pre-restore-lock**: The pre-restore-lock script locks the job so the restore is consistent across the cluster.
 1. **restore**: The restore script restores the release.
-1. **post-restore-unlock**: The post-restore-unlock script unlocks the job after the restore is complete. 
+1. **post-restore-unlock**: The post-restore-unlock script unlocks the job after the restore is complete.
 
-## <a id='workflow'></a>Workflow
+## <a id='workflow'></a>What happens when you run a BBR backup?
 
-Operators download the BBR binary and transfer it to a jumpbox. Then they run BBR from the jumpbox, specifying the name of the BOSH deployment or BOSH Director to back up.
+*Prerequisite:* The operator has [installed BBR](installing.html)
 
-BBR examines the jobs in the BOSH deployment or BOSH Director, and triggers the pre-backup lock, backup, and post-backup unlock scripts.
+When a BBR `backup` command is run the following things happen:
+
+BBR connects to instances in the deployment/director that was specified in the BBR command invocation.
+Using these connections, BBR gathers information on which scripts it should run for each stage in the backup.
+
+BBR then runs the `pre-backup-lock`, `backup`, and `post-backup-unlock` scripts in stages.
 
 Scripts in the same stage all finish before the next stage starts. For instance, BBR triggers and waits for completion of all `pre-backup-lock` scripts before it triggers any `backup` scripts.
-Scripts within the `backup` and `restore` stages may happen in any order. A release author can configure ordering for scripts in in the `locking` and `unlocking` stages, but any scripts that are unconstrained by that ordering
+Scripts within the `backup` stage may happen in any order. A release author can configure ordering for scripts in in the `locking` and `unlocking` stages, but any scripts that are unconstrained by that ordering
 can also happen in any order within their stage.
 
-The backup artifacts are drained to the jumpbox where the operator can transfer them to storage and use them to restore the BOSH deployment or BOSH Director.
+BBR drains and tars the backup artifacts to the jumpbox from where the operator can transfer the resulting artifact to storage and use it to restore the BOSH deployment or BOSH Director.
 
 The following diagram shows a sample backup flow.
 
 <%= image_tag('backup-flow.png') %>
+
+
+## <a id='workflow'></a>What happens when you run a BBR restore?
+
+*Prerequisite:* You have available on the jumpbox an artifact produced by a BBR `backup` of your deployment or director.
+
+When a BBR `restore` command is run for that artifact the following things happen:
+
+BBR connects to instances in the deployment/director that was specified in the command invocation.
+Using these connections, BBR gathers information on which scripts it should run for each stage in the restore.
+
+BBR uploads the each part of the artifact to the instance it belongs to.
+
+BBR then runs the `pre-restore-lock`, `restore`, and `post-restore-unlock` scripts in stages.
+
+Scripts in the same stage all finish before the next stage starts. For instance, BBR triggers and waits for completion of all `pre-restore-lock` scripts before it triggers any `restore` scripts.
+Scripts within the `restore` stage may happen in any order. A release author can configure ordering for scripts in in the `locking` and `unlocking` stages, but any scripts that are unconstrained by that ordering
+can also happen in any order within their stage.
+
 
 ## <a id='syntax'></a>Syntax
 
@@ -102,8 +126,8 @@ The parameters are:
 * `--debug`: This is an optional flag to display debug output.
 * `--private-key-path`: This is the path to the SSH private key used to connect to the BOSH Director.
 * `--username`: This is the SSH username of the BOSH Director.
-* `--host`: This is the address of the BOSH Director with an optional port that defaults to 22. If the BOSH Director is public, this is a URL, such as `https://my-bosh.xxx.cf-app.com`. Otherwise, this is the BOSH Director IP address. 
-* `--artifact-path`: This is the path to the BOSH Director backup you want to restore.
+* `--host`: This is the address of the BOSH Director with an optional port that defaults to 22. If the BOSH Director is public, this is a URL, such as `https://my-bosh.xxx.cf-app.com`. Otherwise, this is the BOSH Director IP address.
+* `--artifact-path`: This is the path to the BOSH Director backup artifact you want to restore from.
 
 ### BOSH Deployment
 
@@ -127,7 +151,7 @@ The arguments are:
 * `--target`: This is the FQDN or IP address of your BOSH Director.
 * `--deployment`: This is the name of the deployment you want to back up. For a list of deployments, run `bosh deployments`.
 * `--ca-cert`: This is the path to the BOSH Director’s Certificate Authority (CA) certificate if the certificate is not verifiable by the local machine’s certificate chain.
-* `--artifact-path`: This is the path to the BOSH deployment backup you want to restore.
+* `--artifact-path`: This is the path to the BOSH deployment backup artifact you want to restore from.
 
 ### Subcommands
 
