--- a/restore.html.md.erb
+++ b/restore.html.md.erb
@@ -5,45 +5,59 @@ owner: BBR
 
 This topic describes how to use BOSH Backup and Restore (BBR) to restore a BOSH deployment or BOSH Director.
 
-To back up a BOSH deployment or BOSH Director with BBR, see the [Backing Up with BOSH Backup and Restore](backup.html) topic. 
+To back up a BOSH deployment or BOSH Director with BBR, see the [Backing Up with BOSH Backup and Restore](backup.html) topic.
 
 The steps in this topic allow you to restore a BOSH Director, a BOSH deployment, or both.
 
 ## <a id="compatibility"></a> Compatibility of Restore
 
-This section describes the restrictions for a backup artifact to be restorable to another environment. 
-This section is for guidance only, and Pivotal highly recommends that operators validate their backups by 
-using the backup artifacts in a restore. 
+This section describes the restrictions for a backup artifact to be restorable to another environment.
+This section is for guidance only, and Pivotal highly recommends that operators validate their backups by
+using the backup artifacts in a restore.
 
 The restrictions for a backup artifact to be restorable are the following:
 
-+ **Topology**: BBR requires the BOSH topology of a deployment to be the same in the restore environment as it was in the backup environment. 
-+ **Naming of instance groups and jobs**: For any deployment that implements the backup and restore scripts, the instance groups and jobs must have the same names. 
-+ **Number of instance groups and jobs**: For instance groups and jobs that have backup and restore scripts, there must be the same number of instances. 
-+ **Limited validation**: BBR puts the backed up data into the corresponding instance groups and jobs in the restored environment, 
-    but can’t validate the restore beyond that. 
-    For example, if the MySQL encryption key is different in the restore environment, 
-    the BBR restore might succeed although the restored MySQL database is unusable. 
++ **Topology**: BBR requires the BOSH topology of a deployment to be the same in the restore environment as it was in the backup environment.
++ **Naming of instance groups and jobs**: For any deployment that implements the backup and restore scripts, the instance groups and jobs must have the same names.
++ **Number of instance groups and jobs**: For instance groups and jobs that have backup and restore scripts, there must be the same number of instances.
++ **Limited validation**: BBR puts the backed up data into the corresponding instance groups and jobs in the restored environment,
+    but can’t validate the restore beyond that.
+    For example, if the MySQL encryption key is different in the restore environment,
+    the BBR restore might succeed although the restored MySQL database is unusable.
 
-<p class="note"><strong>Note</strong>: A change in VM size or underlying hardware should not affect BBR’s ability to restore data, 
-as long as there is adequate storage space to restore the data. </p> 
+<p class="note"><strong>Note</strong>: A change in VM size or underlying hardware should not affect BBR’s ability to restore data,
+as long as there is adequate storage space to restore the data. </p>
 
 ## <a id="recreate-vms"></a> Step 1: Recreate VMs
 
-Before restoring a BOSH Deployment or director, you must create the VMs that constitute the deployment.
+Before restoring a BOSH Deployment or director, you must create the VMs that constitute that deployment/director.
 
-In a disaster recovery scenario, re-create the deployment with your BOSH deployment manifest. If you used the `--with-manifest` flag when running the BBR backup command, your backup artifact includes a copy of your manifest. 
+In a disaster recovery scenario, you can re-create the deployment with your BOSH deployment manifest.
+If you used the `--with-manifest` flag when running the BBR backup command, your backup artifact includes a copy of your manifest.
+
+Alternatively, if you are restoring a deployment and you have already restored the director
+which contains knowledge of this deployment, then so long as the [BOSH Resurrector](https://bosh.io/docs/resurrector.html)
+is on, your VMs for the deployment will be brought back by the director.
 
 ## <a id="artifacts-jumpbox"></a> Step 2: Transfer Artifacts to Jumpbox
 
-In the [Backing Up with BOSH Backup and Restore](backup.html) topic, you moved the TAR and metadata files of the backup artifact off your jumpbox to your preferred storage space. Now you must transfer those files back to your jumpbox.
+Move your BBR backup artifact from your safe storage location to the jumpbox.
 
 For instance, you could SCP the backup artifact to your jumpbox:
   <pre class="terminal">$ scp LOCAL\_PATH\_TO\_BACKUP\_ARTIFACT JUMPBOX\_USER/JUMPBOX\_ADDRESS</pre>
 
-## <a id='restore'></a> Step 3: Restore
+If it is encrypted, decrypt it.
 
-### <a id='restore-director'></a> Restore a BOSH Director
+## <a id='restore'></a> Step 3: Restore
+<p class="note"><strong>Note</strong>: The BBR restore command can take a long time to complete. You can
+  run it independently of the SSH session so that the process can continue running even if your
+  connection to the jumpbox fails. The command above uses <code>nohup</code>, but you could also run
+   the command in a <code>screen</code> or <code>tmux</code> session.</p>
+
+   Use the optional `--debug` flag to enable debug logs.
+   See the [Exit Codes and Logging](logging.html) topic for more information.
+
+#### <a id='restore-director'></a> Restore a BOSH Director
 
 Perform the following steps to restore a BOSH Director:
 
@@ -57,27 +71,15 @@ Perform the following steps to restore a BOSH Director:
       restore \
       	--artifact-path PATH\_TO\_DIRECTOR\_BACKUP
   </pre>
-
-    Use the optional `--debug` flag to enable debug logs. See the [Exit Codes and Logging](logging.html) topic for more information.
-    <br><br>
-    Replace the placeholder values as follows:
+  Replace the placeholder values as follows:
     * `PATH_TO_PRIVATE_KEY`: This is the path to the SSH private key used to connect to the BOSH Director.
     * `USER_NAME`: This is the SSH username of the BOSH Director.
-    * `HOST`: This is the address of the BOSH Director with an optional port that defaults to 22. If the BOSH Director is public, this is a URL, such as `https://my-bosh.xxx.cf-app.com`. Otherwise, this is the BOSH Director IP address. 
+    * `HOST`: This is the address of the BOSH Director with an optional port that defaults to 22. If the BOSH Director is public, this is a URL, such as `https://my-bosh.xxx.cf-app.com`. Otherwise, this is the BOSH Director IP address.
 	* `PATH_TO_DIRECTOR_BACKUP`: This is the path to the BOSH Director backup you want to restore.
 
-<p class="note"><strong>Note</strong>: The BBR restore command can take a long time to complete. You can run it independently of the SSH session so that the process can continue running even if your connection to the jumpbox fails. The command above uses <code>nohup</code>, but you could also run the command in a <code>screen</code> or <code>tmux</code> session.</p>
+If the command fails, try [these steps](#recovering-from-failing-command)
 
-If the command fails, do the following:
-
-1. Ensure all the parameters in the command are set.
-1. Ensure the BOSH Director credentials are valid.
-1. Ensure the specified BOSH Director exists.
-1. Ensure that the jumpbox can reach the BOSH Director.
-1. Ensure the source BOSH Director is compatible with the target BOSH Director.
-1. Consult the [Exit Codes and Logging](logging.html) topic.
-
-### <a id='restore-deployment'></a> Restore a BOSH Deployment
+#### <a id='restore-deployment'></a> Restore a BOSH Deployment
 
 Perform the following steps to restore a BOSH deployment:
 
@@ -93,24 +95,23 @@ Perform the following steps to restore a BOSH deployment:
       restore \
       --artifact-path PATH\_TO\_DEPLOYMENT\_BACKUP
   </pre>
-
-    Use the optional `--debug` flag to enable debug logs. See the [Exit Codes and Logging](logging.html) topic for more information.
-    <br><br>
     Replace the placeholder values as follows:
     * `BOSH_CLIENT`, `BOSH_CLIENT_SECRET`: If you have a BOSH Director with User Account and Authentication (UAA) as the authentication provider, use a UAA client as the username and a UAA client secret as the password. If you have a BOSH Director with basic auth configured, use your username and password.
     * `BOSH_TARGET`: This is the FQDN or IP address of your BOSH Director.
     * `DEPLOYMENT-NAME`: This is the name of the deployment you want to restore.
-    * `PATH_TO_BOSH_CA_CERT`: This is the path to the BOSH Director’s Certificate Authority (CA) certificate if the certificate is not verifiable by the local machine’s certificate chain. 
+    * `PATH_TO_BOSH_CA_CERT`: This is the path to the BOSH Director’s Certificate Authority (CA) certificate if the certificate is not verifiable by the local machine’s certificate chain.
 	* `PATH_TO_DEPLOYMENT_BACKUP`: This is the path to the BOSH deployment backup you want to restore.
-	<p class="note"><strong>Note</strong>: The BBR restore command can take a long time to complete. You can run it independently of the SSH session so that the process can continue running even if your connection to the jumpbox fails. The command above uses <code>nohup</code>, but you could also run the command in a <code>screen</code> or <code>tmux</code> session.</p>
 
-If the command fails, do the following:
+If the command fails, try [these steps](#recovering-from-failing-command)
 
+## <a id="recovering-from-failing-command"></a>Recovering from a failing command
 1. Ensure all the parameters in the command are set.
 1. Ensure the BOSH Director credentials are valid.
 1. Ensure the specified BOSH deployment exists.
 1. Ensure that the jumpbox can reach the BOSH Director.
 1. Ensure the source BOSH deployment is compatible with the target BOSH deployment.
+1. If you see the error message `Directory /var/vcap/store/bbr-backup already exists on instance`,
+run the relevant [cleanup command](#manual-clean)
 1. Consult the [Exit Codes and Logging](logging.html) topic.
 
 ## <a id='cancel-restore'></a>Cancel a Restore
