--- a/backup.html.md.erb
+++ b/backup.html.md.erb
@@ -96,10 +96,14 @@ Perform the following steps to check that your BOSH Director is reachable and ha
     Use the optional `--debug` flag to enable debug logs. See the [Exit Codes and Logging](logging.html) topic for more information.
     <br><br>
     Replace the placeholder values as follows:
-    * `BOSH_CLIENT`, `BOSH_CLIENT_SECRET`: If you have a BOSH Director with User Account and Authentication (UAA) as the authentication provider, use a UAA client as the username and a UAA client secret as the password. If you have a BOSH Director with basic auth configured, use your username and password.
+    * `BOSH_CLIENT`, `BOSH_CLIENT_SECRET`:
+      - If you have a BOSH Director with User Account and Authentication (UAA) as the authentication provider, use a UAA client as the username and a UAA client secret as the password.
+      - If you have a BOSH Director with basic auth configured, use your username and password.
     * `BOSH_TARGET`: This is the FQDN or IP address of your BOSH Director.
     * `DEPLOYMENT-NAME`: This is the name of the deployment you want to back up. For a list of deployments, run `bosh deployments`.
     * `PATH_TO_BOSH_CA_CERT`: This is the path to the BOSH Director’s Certificate Authority (CA) certificate if the certificate is not verifiable by the local machine’s certificate chain.
+      - if you used [`bbl`](https://github.com/cloudfoundry/bosh-bootloader) spin up your director then you can retrieve the CA cert with `bbl director-ca-cert`
+      - if you manually deployed then it may be stored in a `secrets.yml` or similar
 
 1. If the pre-backup check succeeds, continue to the [next section](#bbr-backup-deployment).
 If it fails, the command will print the reason why it cannot back up the deployment.
